syntax = "proto3";
package sgn.sync.v1;

option go_package = "github.com/celer-network/sgn-v2/x/sync/types";

import "gogoproto/gogo.proto";

import "sgn/sync/v1/sync.proto";

message StakingContractParamData {
  uint64 record = 1;
  string value = 2;
}

message ProposeUpdate {
  DataType type = 1;
  bytes data = 2;
}

message MsgProposeUpdates {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  repeated ProposeUpdate updates = 1;
  uint64 eth_block = 2;
  string sender = 3;
}

message VoteUpdate {
  uint64 id = 1;
  VoteOption option = 2;
}

message MsgVoteUpdates {
  repeated VoteUpdate votes = 1;
  string sender = 2;
}
